# OpenXR-HapticsOverride

./: CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md  layer.json.in
src/openxr_api_layer/: entry.cpp  layer.cpp  layer.h
src/openxr_api_layer/utils/: log.cpp  log.h
